@@ -196,14 +196,14 @@ class TestOCIBuildManagerIteration(TestCase):
             "git_repository": "https://git.launchpad.dev/~example/+git/snap",
             "git_path": "master",
             "build_file": "build-aux/Dockerfile",
-            "build_args": OrderedDict([("VAR1", "xxx"), ("VAR2", "yyy")]),
+            "build_args": OrderedDict([("VAR1", "xxx"), ("VAR2", "yyy zzz")]),
             }
         expected_options = [
             "--git-repository", "https://git.launchpad.dev/~example/+git/snap",
             "--git-path", "master",
             "--build-file", "build-aux/Dockerfile",
-            "--build-arg=VAR1=xxx",
-            "--build-arg=VAR2=yyy",
+            "--build-arg", "VAR1=xxx",
+            "--build-arg", "VAR2=yyy zzz",
         ]
         yield self.startBuild(args, expected_options)
 
